[package]
name = "fluids"
version = "0.1.0"
edition = "2021"

[dependencies]
zeus = { git = "https://github.com/Niggi1105/zeus", version="0.1.10"}
rand = { version = "0.9.0", optional = true} 

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "my_benchmark"
harness = false

[features]
default = ["random"]
random = ["zeus/random", "dep:rand"]

